# deer-flow

./: .cursorignore  .env.example  .gitignore  Procfile  README.md  conf.yaml.example  docker-compose.yml  justfile  langgraph.json  main.py  pyproject.toml  server.py
.github/workflows/: lint.yaml  unittest.yaml
docs/x/plan/: 250707-搜索支持firecrawl兼容api.md  250708-调研增强deerflow的方案.md  250713-一部分节点考虑增加节点缓存.md  250713-优化langfuse的traces支持深度调研工具的两阶段.md  250713-使用langchain_sandbox或者其他沙盒环境替代coder实现.md  250713-频繁在report阶段发生max-token-limit错误.md  250714-可以与obsidian进行交互如RAG,MCP等场景.md
scripts/: pre-commit
src/: __init__.py  workflow.py
src/agents/: agents.py
src/config/: __init__.py  agents.py  configuration.py  loader.py
src/crawler/: article.py
src/deerflowx/: workflow.py
src/deerflowx/agents/: __init__.py  agents.py
src/deerflowx/config/: __init__.py  configuration.py  questions.py  settings.py
src/deerflowx/crawler/: jina_client.py
src/deerflowx/graph/: builder.py  nodes.py  types.py
src/deerflowx/llms/: llm.py
src/deerflowx/prompts/: template.py
src/deerflowx/rag/: builder.py  ragflow.py  retriever.py  vikingdb_knowledge_base.py
src/deerflowx/server/: __init__.py  app.py  chat_request.py  config_request.py  mcp_request.py  mcp_utils.py  rag_request.py
src/deerflowx/tools/: __init__.py  crawl.py  python_repl.py  retriever.py  search.py
src/deerflowx/utils/: context_compressor.py  json_utils.py  langfuse_utils.py  node_base.py  workflow_executor.py
src/graph/: builder.py  nodes.py
src/llms/: __init__.py  llm.py
src/prompt_enhancer/graph/: __init__.py  builder.py  enhancer_node.py
src/prompts/: __init__.py  planner_model.py  template.py
src/prose/: __init__.py
src/prose/graph/: builder.py  prose_continue_node.py  prose_fix_node.py  prose_improve_node.py  prose_longer_node.py  prose_shorter_node.py  prose_zap_node.py
src/rag/: builder.py  ragflow.py  retriever.py  vikingdb_knowledge_base.py
src/server/: app.py  chat_request.py  config_request.py  mcp_request.py  mcp_utils.py  rag_request.py
src/tools/: __init__.py  crawl.py  decorators.py  python_repl.py  retriever.py  search.py
src/utils/: __init__.py  json_utils.py
tests/: conftest.py  test_state.py
tests/integration/: test_crawler.py  test_nodes.py  test_python_repl_tool.py  test_template.py
(+99 files in other folders)
