[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deer-flow"
version = "0.1.0"
description = "DeerFlow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "yfinance>=0.2.54",
    "litellm>=1.63.11",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    "duckduckgo-search>=8.0.0",
    "inquirerpy>=0.3.4",
    "arxiv>=2.2.0",
    "mcp>=1.6.0",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-deepseek>=0.1.3",
    "volcengine>=1.0.191",
    "dowhen>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.0.0",
    "langgraph-cli[inmem]>=0.2.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.report]
fail_under = 25

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312" # use minimum version

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D213", "D203"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/{src}/*" = [
    "G004",
    "D",
    "TD",
    "ANN002",
    "ANN003",
    "ANN202",
    # cycle imports defend
    "TC001",
    "TC002",
    "TC003",
    "G004",
    "TRY401",
    "FBT001",
    "FBT002",
]
"**/{tests,docs,examples,benchmarks}/*" = [
    "S",
    "D",
    "ANN",
    "SLF",
    "ARG",
    "PLR",
    "INP",
    "RET",
    "N",
    "SIM",
    "PT",
    "F",
    "PERF",
    "A",
    "B",
    "PLC",
    "PYI",
    "PTH",
    "EM",
    "TRY",
    "ERA",
    "RUF"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

docstring-code-format = true
docstring-code-line-length = "dynamic"